# torchbcsoftmax

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-package.yml
bcsoftmax/: __init__.py  box_constrained_softmax.py  lower_bounded_softmax.py  upper_bounded_softmax.py
test/: bcsoftmax_slow.py  lbsoftmax_slow.py  test_bcsoftmax.py  test_lbsoftmax.py  test_ubsoftmax.py  ubsoftmax_slow.py
